<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tp_bg_default"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtViewMain01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textColor="@color/tp_txt_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewMain02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewMain02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/institute_name"
        android:textAlignment="center"
        android:textColor="@color/tp_txt_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewMain03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMain01" />

    <TextView
        android:id="@+id/txtViewMain03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program_name"
        android:textAlignment="center"
        android:textColor="@color/tp_txt_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewMain04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMain02" />

    <TextView
        android:id="@+id/txtViewMain04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/course_name"
        android:textAlignment="center"
        android:textColor="@color/tp_txt_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewMain05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMain03" />

    <TextView
        android:id="@+id/txtViewMain05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_name"
        android:textAlignment="center"
        android:textColor="@color/tp_txt_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewMain06"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMain04" />

    <TextView
        android:id="@+id/txtViewMain06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/final_date"
        android:textAlignment="center"
        android:textColor="@color/tp_txt_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMain05" />

    <TextView
        android:id="@+id/lbCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/count_down1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCountDonw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCountDonw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/count_down2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbCountDown" />

</androidx.constraintlayout.widget.ConstraintLayout>